# music-library-tools

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  pyproject.toml  requirements.txt  setup.py  test.ipynb
.github/workflows/: build-docker-image.yml  check-code.yml  checks.yml  create-release.yml  dependabot-auto-approve.yml  push-docker-image.yml  test-code.yml
music_library_tools/: daemons.py  genre_correcter.py  genre_corrector.py  music_cleanup_daemon.py  music_import_daemon.py  plex_daemon.py  start.py  utils.py
src/music_library_tools/: __init__.py  __main__.py  __version__.py  cli.py  genre_corrector.py  music_cleanup_daemon.py  music_import_daemon.py  utils.py
tests/: test_music_import_daemon.py
